--- a/template/index.html
+++ b/template/index.html
@@ -18,7 +18,7 @@
 
     <!-- Open Graph (Social Media Preview) -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dm.thegymbyjohnson.com/">
+    <meta property="og:url" content="https://www.thegymbyjohnson.com/">
     <meta property="og:image" content="{{ url_for('assets', path='3d_gym.png') }}">
     <meta property="og:site_name" content="The Gym by Johnson">
     <meta property="og:description" content="Professional gym training and fitness center.">
