--- a/template/index.html
+++ b/template/index.html
@@ -33,7 +33,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "url": "https://dm.thegymbyjohnson.com",
+      "url": "https://www.thegymbyjohnson.com",
       "logo": "{{ url_for('assets', path='3d_gym.png') }}",
       "name": "The Gym by Johnson",
       "sameAs": [
@@ -70,7 +70,7 @@
         <span class="bg__blur"></span>
         <span class="bg__blur header__blur"></span>
         <h4>BEST FITNESS IN THE TOWN</h4>
-        <h1><span>MAKE</span> YOUR BODY SHAPE</h1>
+        <h1><span>Make</span> YOUR BODY SHAPE</h1>
         <p>
           Unleash your potential and embark on a journey towards a stronger,
           fitter, and more confident you. Sign up for 'Make Your Body Shape' now
